--- a/StringLesson1.ipynb
+++ b/StringLesson1.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 70,
    "id": "21b30d13-7c0c-4ada-a5c5-c4041dede12b",
    "metadata": {},
    "outputs": [
@@ -67,16 +67,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "First string: 'Good'\n",
-      "Second string: 'Morning'\n",
-      "With space between: 'Good Morning'\n"
+      "First string: 'John'\n",
+      "Second string: 'Olasiman'\n",
+      "With space between: 'John Olasiman'\n"
      ]
     }
    ],
    "source": [
     "# 3. Create two strings and use concatenation to add a space inbetween them. Then print the result\n",
-    "string1 = \"Good\"\n",
-    "string2 = \"Morning\"\n",
+    "string1 = \"John\"\n",
+    "string2 = \"Olasiman\"\n",
     "result_with_space = string1 + \" \" + string2\n",
     "print(f\"First string: '{string1}'\")\n",
     "print(f\"Second string: '{string2}'\")\n",
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 75,
    "id": "81c24718-60ea-44e1-a60c-d4293ce7f599",
    "metadata": {},
    "outputs": [
@@ -93,25 +93,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Original string: 'The quick brown fox jumped over the lazy dog. #1234567890!'\n",
-      "Position of 'fox': starts at index 16, ends at index 19\n",
-      "Extracted using slice [16:19]: 'fox'\n"
+      "fox\n"
      ]
     }
    ],
    "source": [
-    "# 4. Print the string \"fox\" by using slice notation on the string \"The quick brown fox jumped over the lazy dog. #1234567890!\" to specify the correct range of characters.\n",
+    "# 4. Print the string \"fox\" by using slice notation on the string \"The quick brown fox jumped over the lazy dog. #1234567890!\" to specify the correct range of characters. full_string = \"The quick brown fox jumped over the lazy dog. #1234567890!\"\n",
     "full_string = \"The quick brown fox jumped over the lazy dog. #1234567890!\"\n",
-    "print(f\"Original string: '{full_string}'\")\n",
-    "\n",
-    "# Find the position of \"fox\" first to show the process\n",
-    "fox_start = full_string.find(\"fox\")\n",
-    "fox_end = fox_start + 3\n",
-    "print(f\"Position of 'fox': starts at index {fox_start}, ends at index {fox_end}\")\n",
-    "\n",
-    "# Extract \"fox\" using slice notation\n",
     "extracted_fox = full_string[16:19]\n",
-    "print(f\"Extracted using slice [16:19]: '{extracted_fox}'\")"
+    "print(extracted_fox)"
    ]
   },
   {
@@ -347,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 77,
    "id": "b2481d11-bb94-4705-9ad1-25153b959b42",
    "metadata": {},
    "outputs": [
@@ -584,14 +574,6 @@
     "\n",
     "print(result)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c850ec9a-e54c-46a8-b076-b049df4aaf53",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
