--- a/Exam1/Exam1.ipynb
+++ b/Exam1/Exam1.ipynb
@@ -101,8 +101,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 30,
    "id": "aba16d3a-7957-488e-b1e2-b4ce579c4b7e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "0d43b39e-7bf5-4138-80d4-7fdb7a65a2d5",
    "metadata": {},
    "outputs": [
     {
@@ -114,14 +124,10 @@
      ]
     },
     {
-     "ename": "TypeError",
-     "evalue": "hypo_len() missing 1 required positional argument: 'b'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[22], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m a \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mfloat\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mA: \u001b[39m\u001b[38;5;124m\"\u001b[39m))\n\u001b[0;32m      4\u001b[0m b \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mfloat\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mB: \u001b[39m\u001b[38;5;124m\"\u001b[39m))\n\u001b[1;32m----> 5\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mH = \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mhypo_len(a),(b)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[1;31mTypeError\u001b[0m: hypo_len() missing 1 required positional argument: 'b'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "H = 3.605551275463989\n"
      ]
     }
    ],
@@ -130,16 +136,8 @@
     "def hypo_len(a, b): return ((a ** 2) + (b ** 2)) ** 0.5\n",
     "a = float(input(\"A: \"))\n",
     "b = float(input(\"B: \"))\n",
-    "print(f\"H = {hypo_len(a)(b}}\")"
+    "print(f\"H = {hypo_len(a, b)}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "20c86941-6bd4-4443-be1f-c3746f799647",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
